test: 관리자/사용자 권한, 상태, 예외 관련 통합 테스트 추가 및 개선
- AdminUserManagementControllerIntegrationTest 등 신규/수정
- @WithMockUser, UserDetailsImpl, MockBean 등 테스트 환경 분리 적용